# Vc_toyapp

./: .gitignore  .gitignore.txt  CMakeLists.txt  ConsoleApplication1.cpp  Makefile  README.md  config.mk
